; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_dcache.c_d_alloc_name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_dcache.c_d_alloc_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.qstr = type { i8*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dentry* @d_alloc_name(%struct.dentry* %0, i8* %1) #0 {
  %3 = alloca %struct.dentry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.qstr, align 8
  store %struct.dentry* %0, %struct.dentry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds %struct.qstr, %struct.qstr* %5, i32 0, i32 0
  store i8* %6, i8** %7, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = getelementptr inbounds %struct.qstr, %struct.qstr* %5, i32 0, i32 1
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.qstr, %struct.qstr* %5, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  %13 = getelementptr inbounds %struct.qstr, %struct.qstr* %5, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @full_name_hash(i8* %12, i32 %14)
  %16 = getelementptr inbounds %struct.qstr, %struct.qstr* %5, i32 0, i32 2
  store i32 %15, i32* %16, align 4
  %17 = load %struct.dentry*, %struct.dentry** %3, align 8
  %18 = call %struct.dentry* @d_alloc(%struct.dentry* %17, %struct.qstr* %5)
  ret %struct.dentry* %18
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @full_name_hash(i8*, i32) #1

declare dso_local %struct.dentry* @d_alloc(%struct.dentry*, %struct.qstr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
